Logging and hibernate query rewrite Extension for random pojo